--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -51,6 +51,10 @@ function generateImageProps(image: SanityImageSource) {
 const hasAssistingTag = post.tags?.includes('Asistente');
 const backLinkUrl = hasAssistingTag ? '/assisting' : '/posts';
 const backLinkText = hasAssistingTag ? 'Todas mis colaboraciones' : 'Todos mis proyectos';
+
+// Conditional format for Runways
+const isRunway = post.tags?.includes('Pasarela');
+const creditsSection = isRunway ? 'Enlaces de Interés' : 'Créditos';
 ---
 
 <MainLayout title={post.title}>
@@ -85,7 +89,7 @@ const backLinkText = hasAssistingTag ? 'Todas mis colaboraciones' : 'Todos mis p
               </div>
             )}
         
-            <h2 class="text-center text-2xl md:text-3xl font-bold text-[#541409] ">Créditos</h2>
+            <h2 class="text-center text-2xl md:text-3xl font-bold text-[#541409] ">{creditsSection}</h2>
     <div class="text-base md:text-xl text-[#220d0c]">
       {Array.isArray(post.credits) && <PortableText value={post.credits} />}
     </div>
