--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -8,6 +8,7 @@ import type { SanityImageSource } from "@sanity/image-url/lib/types/types";
 import { PortableText } from "astro-portabletext";
 import MainLayout from '../layouts/main.astro';
 import Footer from '../components/Footer.astro';
+import { Masonry } from 'astro-masonry';
 
 // This function runs at build time to find all the paths to generate.
 export async function getStaticPaths() {
@@ -69,25 +70,25 @@ const creditsSection = isRunway ? 'Enlaces de Interés' : 'Créditos';
     </div>
     {post.gallery && Array.isArray(post.gallery) && post.gallery.length > 0 && (
       <div class="py-8">
-                <div class="  gap-1 grid grid-cols-1 sm:grid-cols-2">
-                  {post.gallery.map((imageWithAlt: { image: SanityImageSource; alt?: string }) => {
-                    if (!imageWithAlt.image) return null;
-                    const imageProps = generateImageProps(imageWithAlt.image);
-                    return (
-                      <img
-                        src={imageProps.src}
-                        srcset={imageProps.srcset}
-                        sizes={imageProps.sizes}
-                        alt={imageWithAlt.alt || ""}
-                        class=" w-full h-auto"
-                        loading="lazy"
-                        decoding="async"
-                      />
-                    );
-                  })}
-                </div>
-              </div>
-            )}
+        <Masonry breakAt={{ 640: 2 }} gap={4}>
+          {post.gallery.map((imageWithAlt: { image: SanityImageSource; alt?: string }) => {
+            if (!imageWithAlt.image) return null;
+            const imageProps = generateImageProps(imageWithAlt.image);
+            return (
+              <img
+                src={imageProps.src}
+                srcset={imageProps.srcset}
+                sizes={imageProps.sizes}
+                alt={imageWithAlt.alt || ""}
+                class="w-full h-auto"
+                loading="lazy"
+                decoding="async"
+              />
+            );
+          })}
+        </Masonry>
+      </div>
+    )}
         
             <h2 class="text-center text-2xl md:text-3xl font-bold text-[#541409] ">{creditsSection}</h2>
     <div class="text-base md:text-xl text-[#220d0c]">
